--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Module module Demo</string>
+    <string name="app_name">Module module_name</string>
 </resources>
